thêm thuộc tính alt cho ảnh

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <div class="topic-card__thumb">
               <picture class="topic-card__media" aria-hidden="true">
                 <source srcset="images/food.webp" type="image/webp" />
-                <img src="images/food.jpg" alt="" loading="lazy" width="1080" height="720" />
+                <img src="images/food.jpg" alt="Ảnh minh họa chủ đề Đồ ăn &amp; Thức uống" loading="lazy" width="1080" height="720" />
               </picture>
               <div class="topic-card__overlay">
                 <div class="topic-card__labels">
@@ -156,7 +156,7 @@
             <div class="topic-card__thumb">
               <picture class="topic-card__media" aria-hidden="true">
                 <source srcset="images/travel.webp" type="image/webp" />
-                <img src="images/travel.jpg" alt="" loading="lazy" width="1280" height="720" />
+                <img src="images/travel.jpg" alt="Ảnh minh họa chủ đề Du lịch" loading="lazy" width="1280" height="720" />
               </picture>
               <div class="topic-card__overlay">
                 <div class="topic-card__labels">
@@ -172,7 +172,7 @@
             <div class="topic-card__thumb">
               <picture class="topic-card__media" aria-hidden="true">
                 <source srcset="images/animals.webp" type="image/webp" />
-                <img src="images/animals.jpg" alt="" loading="lazy" width="1280" height="720" />
+                <img src="images/animals.jpg" alt="Ảnh minh họa chủ đề Động vật" loading="lazy" width="1280" height="720" />
               </picture>
               <div class="topic-card__overlay">
                 <div class="topic-card__labels">
@@ -188,7 +188,7 @@
             <div class="topic-card__thumb">
               <picture class="topic-card__media" aria-hidden="true">
                 <source srcset="images/business.webp" type="image/webp" />
-                <img src="images/business.jpg" alt="" loading="lazy" width="1280" height="670" />
+                <img src="images/business.jpg" alt="Ảnh minh họa chủ đề Kinh doanh" loading="lazy" width="1280" height="670" />
               </picture>
               <div class="topic-card__overlay">
                 <div class="topic-card__labels">
@@ -204,7 +204,7 @@
             <div class="topic-card__thumb">
               <picture class="topic-card__media" aria-hidden="true">
                 <source srcset="images/sport.webp" type="image/webp" />
-                <img src="images/sport.jpg" alt="" loading="lazy" width="1280" height="720" />
+                <img src="images/sport.jpg" alt="Ảnh minh họa chủ đề Thể thao" loading="lazy" width="1280" height="720" />
               </picture>
               <div class="topic-card__overlay">
                 <div class="topic-card__labels">
@@ -220,7 +220,7 @@
             <div class="topic-card__thumb">
               <picture class="topic-card__media" aria-hidden="true">
                 <source srcset="images/tech.webp" type="image/webp" />
-                <img src="images/tech.jpg" alt="" loading="lazy" width="1019" height="720" />
+                <img src="images/tech.jpg" alt="Ảnh minh họa chủ đề Công nghệ" loading="lazy" width="1019" height="720" />
               </picture>
               <div class="topic-card__overlay">
                 <div class="topic-card__labels">
