--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
       <a class="site-header__brand" href="index.html" aria-label="Learnie">
         <img class="brand-logo-image" src="images/icons/Learnie_logo.svg" alt="" aria-hidden="true" loading="lazy" width="426" height="143" />
       </a>
-      <nav class="main-nav" aria-label="Điều hướng chính">
+      <button class="menu-toggle" id="menuToggle" type="button" aria-label="Mở menu điều hướng" aria-expanded="false" aria-controls="mainNav">
+        <span class="menu-toggle__icon">
+          <span class="menu-toggle__line"></span>
+          <span class="menu-toggle__line"></span>
+          <span class="menu-toggle__line"></span>
+        </span>
+      </button>
+      <nav class="main-nav" id="mainNav" aria-label="Điều hướng chính">
         <a class="main-nav__link main-nav__link--active" href="index.html">Trang chủ</a>
         <a class="main-nav__link" href="courses.html">Khóa học</a>
         <a class="main-nav__link" href="about.html">Về chúng tôi</a>
