refactor: cải thiện khả năng hiển thị văn bản: thêm khoảng trắng không ngắt dòng cho các liên kết và tiêu đề trong HTML, CSS và JavaScript

--- a/about.html
+++ b/about.html
@@ -23,10 +23,10 @@
         </span>
       </button>
       <nav class="main-nav" id="mainNav" aria-label="Điều hướng chính">
-        <a class="main-nav__link" href="index.html">Trang chủ</a>
-        <a class="main-nav__link" href="courses.html">Khóa học</a>
-        <a class="main-nav__link main-nav__link--active" href="about.html">Về chúng tôi</a>
-        <a class="main-nav__link" href="contact.html">Liên hệ</a>
+        <a class="main-nav__link" href="index.html">Trang&nbsp;chủ</a>
+        <a class="main-nav__link" href="courses.html">Khóa&nbsp;học</a>
+        <a class="main-nav__link main-nav__link--active" href="about.html">Về&nbsp;chúng&nbsp;tôi</a>
+        <a class="main-nav__link" href="contact.html">Liên&nbsp;hệ</a>
       </nav>
       <div class="site-header__actions">
         <button class="theme-toggle" id="themeToggle" type="button" aria-label="Đổi giao diện">🌙</button>
@@ -38,8 +38,8 @@
     <section class="hero-section hero-section--about reveal">
       <div class="hero-section__inner container">
         <p class="hero-section__eyebrow">Về Learnie</p>
-        <h1 class="hero-section__title">Learnie – Học tiếng&nbsp;Anh thông minh, tự nhiên và đầy cảm hứng.</h1>
-        <p class="hero-section__description">Chúng tôi tạo ra trải nghiệm học giúp bạn vừa giỏi hơn mỗi ngày, vừa thật sự tận hưởng hành trình học tiếng&nbsp;Anh.</p>
+        <h1 class="hero-section__title">Learnie – Học tiếng&nbsp;Anh thông&nbsp;minh, tự nhiên và đầy cảm hứng.</h1>
+        <p class="hero-section__description">Chúng tôi tạo ra trải nghiệm học giúp bạn vừa giỏi hơn mỗi ngày, vừa thật sự tận hưởng hành&nbsp;trình học tiếng&nbsp;Anh.</p>
       </div>
     </section>
 
@@ -47,8 +47,8 @@
       <div class="container story-grid">
         <div class="story-grid__content">
           <p>Learnie ra đời với mục tiêu biến việc học tiếng&nbsp;Anh trở nên dễ dàng, thú vị và phù hợp với mọi người – dù bạn là học sinh, sinh viên hay người đi làm.</p>
-          <p>Chúng tôi tin rằng học ngôn ngữ không chỉ là ghi nhớ từ vựng và ngữ pháp, mà còn là hành trình khám phá văn hóa, mở rộng tư duy và tự tin giao tiếp trong cuộc sống hàng ngày.</p>
-          <p>Với phương pháp học qua quiz tương tác, hình ảnh – âm thanh sinh động và giải thích chi tiết, Learnie giúp bạn chinh phục tiếng&nbsp;Anh một cách tự nhiên, hiệu quả và bền vững.</p>
+          <p>Chúng tôi tin rằng học ngôn ngữ không chỉ là ghi nhớ từ&nbsp;vựng và ngữ pháp, mà còn là hành&nbsp;trình khám phá văn hóa, mở rộng tư duy và tự tin giao tiếp trong cuộc sống hàng ngày.</p>
+          <p>Với phương pháp học qua quiz tương tác, hình ảnh – âm thanh sinh động và giải&nbsp;thích chi tiết, Learnie giúp bạn chinh phục tiếng&nbsp;Anh một cách tự nhiên, hiệu quả và bền vững.</p>
         </div>
         <figure class="story-grid__media">
           <picture>
@@ -74,12 +74,12 @@
           <article class="value-card">
             <span class="value-card__icon" aria-hidden="true">💙</span>
             <h3 class="value-card__title">Tận tâm</h3>
-            <p class="value-card__description">Cam kết mang đến trải nghiệm học tập tốt nhất cho từng học viên.</p>
+            <p class="value-card__description">Cam kết mang đến trải nghiệm học&nbsp;tập tốt nhất cho từng học&nbsp;viên.</p>
           </article>
           <article class="value-card">
             <span class="value-card__icon" aria-hidden="true">🤝</span>
             <h3 class="value-card__title">Cộng đồng</h3>
-            <p class="value-card__description">Xây dựng cộng đồng học viên cùng chia sẻ, hỗ trợ và phát triển.</p>
+            <p class="value-card__description">Xây dựng cộng đồng học&nbsp;viên cùng chia sẻ, hỗ trợ và phát triển.</p>
           </article>
         </div>
       </div>
@@ -89,7 +89,7 @@
       <div class="container">
         <div class="section__heading">
           <h2 class="section__title">Đội ngũ của chúng tôi</h2>
-        <p class="section__description">Learnie không chỉ là một dự án học tập, mà là nơi chúng tôi biến niềm yêu thích công nghệ thành động lực giúp người khác học tốt&nbsp;hơn mỗi&nbsp;ngày.</p>
+        <p class="section__description">Learnie không chỉ là một dự án học&nbsp;tập, mà là nơi chúng tôi biến niềm yêu thích Công&nbsp;nghệ thành động lực giúp người khác học tốt&nbsp;hơn mỗi&nbsp;ngày.</p>
         </div>
         <div class="team-grid">
           <article class="team-card">
@@ -122,10 +122,10 @@
 
     <section class="hero-section hero-section--cta reveal">
       <div class="hero-section__inner container">
-        <h2 class="hero-section__subtitle">Bạn có câu hỏi hoặc góp ý cho Learnie?</h2>
-        <p class="hero-section__description">Chúng tôi luôn sẵn sàng lắng nghe và đồng hành cùng bạn trên hành trình học tiếng&nbsp;Anh.</p>
+        <h2 class="hero-section__subtitle">Bạn có câu&nbsp;hỏi hoặc góp ý cho Learnie?</h2>
+        <p class="hero-section__description">Chúng tôi luôn sẵn&nbsp;sàng lắng nghe và đồng hành cùng bạn trên hành&nbsp;trình học tiếng&nbsp;Anh.</p>
         <div class="hero-section__actions">
-          <a class="btn btn--primary" href="contact.html">Liên hệ với chúng tôi <span class="btn__icon">➜</span></a>
+          <a class="btn btn--primary" href="contact.html">Liên&nbsp;hệ với chúng tôi <span class="btn__icon">➜</span></a>
         </div>
       </div>
     </section>
@@ -136,16 +136,16 @@
       <div class="footer__column footer__column--brand">
         <div class="footer__brand">
           <img class="footer__brand-logo" src="images/icons/Learnie_logo.svg" alt="Learnie" loading="lazy" width="426" height="143" />
-          <p class="footer__description">Học tiếng&nbsp;Anh thông minh hơn, dễ hơn và vui hơn.</p>
+          <p class="footer__description">Học tiếng&nbsp;Anh thông&nbsp;minh&nbsp;hơn, dễ&nbsp;hơn và vui&nbsp;hơn.</p>
         </div>
       </div>
       <div class="footer__column">
         <h3 class="footer__heading">Liên kết nhanh</h3>
         <ul class="footer__links">
-          <li><a class="footer__link" href="index.html">Trang chủ</a></li>
-          <li><a class="footer__link" href="courses.html">Khóa học</a></li>
-          <li><a class="footer__link" href="about.html">Về chúng tôi</a></li>
-          <li><a class="footer__link" href="contact.html">Liên hệ</a></li>
+          <li><a class="footer__link" href="index.html">Trang&nbsp;chủ</a></li>
+          <li><a class="footer__link" href="courses.html">Khóa&nbsp;học</a></li>
+          <li><a class="footer__link" href="about.html">Về&nbsp;chúng&nbsp;tôi</a></li>
+          <li><a class="footer__link" href="contact.html">Liên&nbsp;hệ</a></li>
         </ul>
       </div>
       <div class="footer__column">
