--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <!-- Learnie Project | IE104 | Nhóm Learnie | 2025 -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Learnie | Học tiếng&nbsp;Anh thông minh hơn, dễ hơn và vui hơn.</title>
+  <title>Learnie | Học tiếng&nbsp;Anh thông&nbsp;minh&nbsp;hơn, dễ&nbsp;hơn và vui&nbsp;hơn.</title>
   <link rel="stylesheet" href="css/base.css" />
   <link rel="stylesheet" href="css/animation.css" />
   <link rel="stylesheet" href="css/home.css" />
@@ -23,10 +23,10 @@
         </span>
       </button>
       <nav class="main-nav" id="mainNav" aria-label="Điều hướng chính">
-        <a class="main-nav__link main-nav__link--active" href="index.html">Trang chủ</a>
-        <a class="main-nav__link" href="courses.html">Khóa học</a>
-        <a class="main-nav__link" href="about.html">Về chúng tôi</a>
-        <a class="main-nav__link" href="contact.html">Liên hệ</a>
+        <a class="main-nav__link main-nav__link--active" href="index.html">Trang&nbsp;chủ</a>
+        <a class="main-nav__link" href="courses.html">Khóa&nbsp;học</a>
+        <a class="main-nav__link" href="about.html">Về&nbsp;chúng&nbsp;tôi</a>
+        <a class="main-nav__link" href="contact.html">Liên&nbsp;hệ</a>
       </nav>
       <div class="site-header__actions">
         <button class="theme-toggle" id="themeToggle" type="button" aria-label="Đổi giao diện" aria-pressed="false">🌙</button>
@@ -38,7 +38,7 @@
     <section class="hero-section hero-section--home reveal">
       <div class="hero-section__inner container">
         <h1 class="hero-section__title">Học tiếng&nbsp;Anh thông&nbsp;minh&nbsp;hơn, dễ&nbsp;hơn và&nbsp;vui&nbsp;hơn cùng Learnie!</h1>
-        <p class="hero-section__description">Luyện tập qua câu hỏi thực tế, được chấm điểm tự động và giải thích chi tiết giúp bạn tự tin sử dụng tiếng Anh mỗi ngày.</p>
+        <p class="hero-section__description">Luyện&nbsp;tập qua câu&nbsp;hỏi thực tế, được chấm&nbsp;điểm tự động và giải&nbsp;thích chi tiết giúp bạn tự tin sử dụng tiếng&nbsp;Anh mỗi ngày.</p>
         <div class="hero-section__actions">
           <a class="btn btn--primary" href="courses.html">Vào học ngay <span class="btn__icon">➜</span></a>
         </div>
@@ -48,8 +48,8 @@
     <section class="section section--features reveal">
       <div class="container">
         <div class="section__heading">
-          <h2 class="section__title">Tính năng nổi bật</h2>
-          <p class="section__description">Learnie cung cấp trải nghiệm học tập toàn diện với nhiều tính năng hỗ trợ hiệu quả.</p>
+          <h2 class="section__title">Tính&nbsp;năng nổi bật</h2>
+          <p class="section__description">Learnie cung cấp trải nghiệm học&nbsp;tập toàn diện với nhiều tính&nbsp;năng hỗ trợ hiệu quả.</p>
         </div>
         <div class="feature-carousel" data-feature-carousel>
           <button class="feature-carousel__control feature-carousel__control--prev" type="button" aria-label="Xem tính năng trước" data-carousel-prev>
@@ -62,7 +62,7 @@
                   <span class="feature-card__icon">📘</span>
                 </div>
                 <div class="feature-card__content">
-                  <h3 class="feature-card__title">Quiz tương tác theo chủ đề</h3>
+                  <h3 class="feature-card__title">Quiz tương tác theo chủ&nbsp;đề</h3>
                   <p class="feature-card__description">Làm bài qua các tình huống đời sống như ăn uống, du lịch, công việc…</p>
                 </div>
               </article>
@@ -71,7 +71,7 @@
                   <span class="feature-card__icon">🔍</span>
                 </div>
                 <div class="feature-card__content">
-                  <h3 class="feature-card__title">Giải thích chi tiết sau mỗi câu</h3>
+                  <h3 class="feature-card__title">Giải&nbsp;thích chi tiết sau mỗi câu</h3>
                   <p class="feature-card__description">Hiểu rõ vì sao đáp án đúng để tránh lặp lại lỗi cũ.</p>
                 </div>
               </article>
@@ -80,8 +80,8 @@
                   <span class="feature-card__icon">📊</span>
                 </div>
                 <div class="feature-card__content">
-                  <h3 class="feature-card__title">Chấm điểm &amp; theo dõi tiến độ</h3>
-                  <p class="feature-card__description">Nhận điểm ngay sau khi làm bài, xem kết quả và điểm cao nhất của bạn.</p>
+                  <h3 class="feature-card__title">Chấm&nbsp;điểm &amp; theo&nbsp;dõi tiến&nbsp;độ</h3>
+                  <p class="feature-card__description">Nhận điểm ngay sau khi làm bài, xem kết&nbsp;quả và điểm&nbsp;cao nhất của bạn.</p>
                 </div>
               </article>
               <article class="feature-card">
@@ -89,8 +89,8 @@
                   <span class="feature-card__icon">🎯</span>
                 </div>
                 <div class="feature-card__content">
-                  <h3 class="feature-card__title">Làm lại để ghi nhớ tốt hơn</h3>
-                  <p class="feature-card__description">Ôn lại những câu sai, luyện lại bài để củng cố từ vựng và phản xạ.</p>
+                  <h3 class="feature-card__title">Làm&nbsp;lại để ghi nhớ tốt hơn</h3>
+                  <p class="feature-card__description">Ôn lại những câu sai, luyện&nbsp;lại bài để củng cố từ&nbsp;vựng và phản xạ.</p>
                 </div>
               </article>
               <article class="feature-card">
@@ -114,13 +114,13 @@
     <section class="section section--stats section--alt reveal">
       <div class="container">
         <div class="section__heading">
-          <h2 class="section__title">Được tin dùng bởi hàng ngàn học viên</h2>
+          <h2 class="section__title">Được tin dùng bởi hàng ngàn học&nbsp;viên</h2>
         </div>
         <div class="stats-list">
           <div class="stats-card">
             <span class="stats-card__icon">👥</span>
             <p class="stats-card__value">10,000+</p>
-            <p class="stats-card__label">người học</p>
+            <p class="stats-card__label">người&nbsp;học</p>
           </div>
           <div class="stats-card">
             <span class="stats-card__icon">⭐</span>
@@ -130,7 +130,7 @@
           <div class="stats-card">
             <span class="stats-card__icon">🎯</span>
             <p class="stats-card__value">50+</p>
-            <p class="stats-card__label">chủ đề học</p>
+            <p class="stats-card__label">chủ&nbsp;đề học</p>
           </div>
         </div>
       </div>
@@ -139,8 +139,8 @@
     <section class="section section--topics reveal">
       <div class="container">
         <div class="section__heading">
-          <h2 class="section__title">Chủ đề phổ biến</h2>
-          <p class="section__description">Khám phá các chủ đề học tiếng&nbsp;Anh thú vị và phù hợp với bạn.</p>
+          <h2 class="section__title">Chủ&nbsp;đề phổ biến</h2>
+          <p class="section__description">Khám phá các chủ&nbsp;đề học tiếng&nbsp;Anh thú vị và phù hợp với bạn.</p>
         </div>
         <div class="topic-grid">
           <article class="topic-card topic-card--food">
@@ -154,7 +154,7 @@
                   <span class="topic-card__label">Đồ ăn &amp; Thức uống</span>
                   <span class="topic-card__label topic-card__label--sub">Food &amp; Drinks</span>
                 </div>
-                <p class="topic-card__description">Học từ vựng về đồ ăn, thức uống và nhà hàng.</p>
+                <p class="topic-card__description">Học từ&nbsp;vựng về Đồ&nbsp;ăn, Thức&nbsp;uống và nhà hàng.</p>
               </div>
             </div>
             <button class="topic-card__cta" type="button" data-topic="food">Khám phá <span class="btn__icon">➜</span></button>
@@ -218,7 +218,7 @@
                   <span class="topic-card__label">Thể thao</span>
                   <span class="topic-card__label topic-card__label--sub">Sports</span>
                 </div>
-                <p class="topic-card__description">Học từ vựng về các môn thể thao và hoạt động.</p>
+                <p class="topic-card__description">Học từ&nbsp;vựng về các môn Thể&nbsp;thao và hoạt động.</p>
               </div>
             </div>
             <button class="topic-card__cta" type="button" data-topic="sports">Khám phá <span class="btn__icon">➜</span></button>
@@ -234,7 +234,7 @@
                   <span class="topic-card__label">Công nghệ</span>
                   <span class="topic-card__label topic-card__label--sub">Technology</span>
                 </div>
-                <p class="topic-card__description">Từ vựng công nghệ, máy tính và thiết bị điện tử.</p>
+                <p class="topic-card__description">Từ&nbsp;vựng Công&nbsp;nghệ, máy tính và thiết bị điện tử.</p>
               </div>
             </div>
             <button class="topic-card__cta" type="button" data-topic="tech">Khám phá <span class="btn__icon">➜</span></button>
@@ -247,7 +247,7 @@
       <div class="container">
         <div class="section__heading">
           <h2 class="section__title">Nhận mẹo học tiếng&nbsp;Anh hữu ích mỗi tuần</h2>
-          <p class="section__description">Đăng ký để nhận email tổng hợp tips, từ vựng và mini-quiz luyện tập hàng tuần - hoàn toàn miễn phí!</p>
+          <p class="section__description">Đăng ký để nhận email tổng hợp tips, từ&nbsp;vựng và mini-quiz luyện&nbsp;tập hàng tuần - hoàn&nbsp;toàn miễn phí!</p>
         </div>
         <form class="newsletter-form" action="#" method="post">
           <label class="visually-hidden" for="newsletterEmail">Email của bạn</label>
@@ -259,8 +259,8 @@
 
     <section class="hero-section hero-section--cta reveal">
       <div class="hero-section__inner container">
-        <h2 class="hero-section__subtitle">Sẵn sàng bắt đầu<br />hành trình học tiếng&nbsp;Anh của bạn?</h2>
-        <p class="hero-section__description">Tham gia cùng hàng nghìn học viên đang luyện tập mỗi ngày<br />và nâng trình tiếng&nbsp;Anh của bạn qua quiz vui nhộn, hiệu quả.</p>
+        <h2 class="hero-section__subtitle">Sẵn&nbsp;sàng bắt&nbsp;đầu<br />hành&nbsp;trình học tiếng&nbsp;Anh của bạn?</h2>
+        <p class="hero-section__description">Tham gia cùng hàng nghìn học&nbsp;viên đang luyện&nbsp;tập mỗi ngày<br />và nâng trình tiếng&nbsp;Anh của bạn qua quiz vui nhộn, hiệu quả.</p>
         <div class="hero-section__actions">
           <a class="btn btn--primary" href="courses.html">Vào học ngay <span class="btn__icon">➜</span></a>
         </div>
@@ -273,16 +273,16 @@
       <div class="footer__column footer__column--brand">
         <div class="footer__brand">
           <img class="footer__brand-logo" src="images/icons/Learnie_logo.svg" alt="Learnie" loading="lazy" width="426" height="143" />
-          <p class="footer__description">Học tiếng&nbsp;Anh thông minh hơn, dễ hơn và vui hơn.</p>
+          <p class="footer__description">Học tiếng&nbsp;Anh thông&nbsp;minh&nbsp;hơn, dễ&nbsp;hơn và vui&nbsp;hơn.</p>
         </div>
       </div>
       <div class="footer__column">
         <h3 class="footer__heading">Liên kết nhanh</h3>
         <ul class="footer__links">
-          <li><a class="footer__link" href="index.html">Trang chủ</a></li>
-          <li><a class="footer__link" href="courses.html">Khóa học</a></li>
-          <li><a class="footer__link" href="about.html">Về chúng tôi</a></li>
-          <li><a class="footer__link" href="contact.html">Liên hệ</a></li>
+          <li><a class="footer__link" href="index.html">Trang&nbsp;chủ</a></li>
+          <li><a class="footer__link" href="courses.html">Khóa&nbsp;học</a></li>
+          <li><a class="footer__link" href="about.html">Về&nbsp;chúng&nbsp;tôi</a></li>
+          <li><a class="footer__link" href="contact.html">Liên&nbsp;hệ</a></li>
         </ul>
       </div>
       <div class="footer__column">
