layout: add comment index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     Learnie Project | IE104 | Nhóm Learnie | 2025
     File: index.html
     Mục đích: Giao diện trang chủ chính của website Learnie
+    Người thực hiện: Lê Ngọc Phương Nga - MSSV 23520992
+    Ngày cập nhật: 19/11/2025
   -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
