add comment to about.html

--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/about.css" />
 </head>
 <body>
+  <!-- ===== HEADER: Logo + Navigation + Theme Toggle ===== -->
   <header class="site-header">
     <div class="site-header__navbar container">
       <a class="site-header__brand" href="index.html" aria-label="Learnie">
@@ -28,6 +29,7 @@
   </header>
 
   <main>
+    <!-- ===== HERO: Giới thiệu tổng quan về Learnie ===== -->
     <section class="hero-section hero-section--about reveal">
       <div class="hero-section__inner container">
         <p class="hero-section__eyebrow">Về Learnie</p>
@@ -36,6 +38,7 @@
       </div>
     </section>
 
+    <!-- ===== STORY: Câu chuyện và mục tiêu của Learnie ===== -->
     <section class="section section--story reveal">
       <div class="container story-grid">
         <div class="story-grid__content">
@@ -52,6 +55,7 @@
       </div>
     </section>
 
+    <!-- ===== VALUES: Giá trị cốt lõi của Learnie ===== -->
     <section class="section section--values reveal">
       <div class="container">
         <div class="section__heading">
@@ -78,6 +82,7 @@
       </div>
     </section>
 
+    <!-- ===== TEAM: Giới thiệu thành viên nhóm ===== -->
     <section class="section section--team reveal">
       <div class="container">
         <div class="section__heading">
@@ -113,6 +118,7 @@
       </div>
     </section>
 
+    <!-- ===== CTA: Kêu gọi người dùng liên hệ ===== -->
     <section class="hero-section hero-section--cta reveal">
       <div class="hero-section__inner container">
         <h2 class="hero-section__subtitle">Bạn có câu hỏi hoặc góp ý cho Learnie?</h2>
@@ -124,6 +130,7 @@
     </section>
   </main>
 
+  <!-- ===== FOOTER: Liên kết nhanh + mạng xã hội + giờ làm việc ===== -->
   <footer class="footer">
     <div class="footer__grid container">
       <div class="footer__column footer__column--brand">
